
2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, coblocal.h (cob_get_dump_file): export for internal
	  call, only use trace file if dump file cannot be opened
	* termio.c (cob_dump_field): removed trailing spaces for group
	  items, get trace file from (cob_get_dump_file)

2018-02-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: cater for empty module_sources

2018-02-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reportio.c: adjusted runtime error messages

2018-02-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, coblocal.h: removed external_display_print_file as
	  cob_display_print_file is always external
	* common.c (cob_open_logfile): moved log file opening handling
	  code from cob_check_trace_file to new static function
	* common.c (cob_debug_open): refactored, allowed debug log to be
	  opened in append mode
	* common.c [COB_DEBUG_LOG]: fixed issues when debug log has same
	  name as trace file, fixed missing free of cob_debug_file_name

2018-02-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c [!COB_DEBUG_LOG]: adjusted handling of COB_DEBUG_LOG to
	  minimize active code while still raise a warning (instead of an
	  error)

2018-01-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: change all typedef struct/union to be named using
	  the same name schema
	* common.c (explain_field_type): new function,
	  used texts may be tweaked later
	* common.c (cob_check_numeric): set COB_EC_DATA_INCOMPATIBLE if
	  applicable and use only printable representation int the error
	  message for numeric items that are actually printable,
	  otherwise use hex representation

2018-01-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (valid_field_data): bug #491 allow numeric edited
	  fields to contain all spaces, internally seen as zero

2018-01-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
