@@ -369,6 +369,8 @@ COB_HIDDEN void		cob_field_to_string	(const cob_field *, void *,
 						 const size_t);
 COB_HIDDEN void		cob_parameter_check	(const char *, const int);
 COB_HIDDEN void		cob_runtime_error	(const char *, ...) COB_A_FORMAT12;
+COB_HIDDEN void		cob_runtime_warning_external	(const char *, const int,
+						const char *, ...) COB_A_FORMAT34;
 COB_HIDDEN void		cob_runtime_warning	(const char *, ...) COB_A_FORMAT12;
 
 COB_HIDDEN cob_settings *cob_get_settings_ptr	(void);
